Fixing z-index issue with pop-up.

--- a/addtocal.css
+++ b/addtocal.css
@@ -33,6 +33,7 @@ ul#addtocal_menu {
   position: absolute;
   display: none;
   min-width: 150px;
+  z-index: 50;
 }
 
 ul#addtocal_menu li {
